cambios para entrega final

--- a/index.html
+++ b/index.html
@@ -10,55 +10,58 @@
     <link rel="stylesheet" href="estilos/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Poppins:wght@200&family=Rubik:wght@300&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Poppins:wght@200&family=Rubik:wght@300&display=swap"
+        rel="stylesheet">
     <title>RIOFTBL</title>
 
 </head>
 
 <body class="contenedor">
 
-        <div class="contenedor-logo">
-            <div class="logo">
-                <a href="index.html">
-                    <h1>RIOFTBL</h1>
-                </a>
-            </div>    
-                    
-            <nav class="navegacion">
-                <ul class="menu">
-                    <li><a href="index.html">INICIO</a></li>
-                    <li><a href="femenino.html">FEMENINO</a></li>
-                    <li><a href="masculino.html">MASCULINO</a></li></li>
-                    <li><a href="informacion.html">INFORMACION</a></li></li>
-                    <li><a href="contacto.html">CONTACTO</a></li></li>
-                    </ul>
-            </nav>
+    <div class="contenedor-logo">
+        <div class="logo">
+            <a href="index.html">
+                <h1>RIOFTBL</h1>
+            </a>
         </div>
-    </header>    
+
+        <nav class="navegacion">
+            <ul class="menu">
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="femenino.html">FEMENINO</a></li>
+                <li><a href="masculino.html">MASCULINO</a></li>
+                <li><a href="informacion.html">INFORMACION</a></li>
+                <li><a href="contacto.html">CONTACTO</a></li>
+            </ul>
+        </nav>
+    </div>
+    </header>
 
     <main class="main">
 
         <div class="portada">
-            <img class="imagen-portada img-fluid" src="multimedia/imagen-portada.jpg" alt="portada">
+            <img class="imagen-portada img-fluid" src="multimedia/imagen-portada.jpg" alt="imagen">
         </div>
 
         <div class="banner">
+            <h2 class="h2-informacion">INFORMACION</h2>
             <a href="informacion.html">
-                <h2 class="h2-informacion">INFORMACION</h2>
-                <img class="imagen-banner img-fluid" src="multimedia/imagen-banner.jpg" alt="banner">
+                <img class="imagen-banner img-fluid" src="multimedia/imagen-banner.jpg" alt="imagen">
             </a>
         </div>
 
         <div class="femenino">
+            <h2 class="h2-femenino">FEMENINO</h2>
             <a href="femenino.html">
-                <h2 class="h2-femenino">FEMENINO</h2>
-                <img class="imagen-femenino img-fluid" src="multimedia/imagen-femenino.jpeg" alt="futbol_femenino">
+                <img class="imagen-femenino img-fluid" src="multimedia/imagen-femenino.jpeg" alt="imagen">
             </a>
         </div>
+
         <div class="masculino">
+            <h2 class="h2-masculino">MASCULINO</h2>
             <a href="masculino.html">
-                <h2 class="h2-masculino">MASCULINO</h2>
-                <img class="imagen-masculino img-fluid" src="multimedia/imagen-masculino.jpeg" alt="Futbol_masculino">
+                <img class="imagen-masculino img-fluid" src="multimedia/imagen-masculino.jpeg" alt="imagen">
             </a>
         </div>
 
@@ -68,15 +71,15 @@
         <section class="contenedor-footer">
             <a href="https://es-la.facebook.com/">
                 <img class="redes" src="multimedia/facebook.png" target="_blank" alt="logo_facebook">
-            <a>
-            <a href="https://www.instagram.com/?hl=es-la">
-                <img class="redes" src="multimedia/logoig.png" target="_blank" alt="logo_instagram">
-            </a>
-            <button type="button" class="whatsapp">
-                    <a href="https://web.whatsapp.com/" target="_blank"> Escribinos </a>
-            </button>
+                <a>
+                    <a href="https://www.instagram.com/?hl=es-la">
+                        <img class="redes" src="multimedia/logoig.png" target="_blank" alt="logo_instagram">
+                    </a>
+                    <button type="button" class="whatsapp">
+                        <a href="https://web.whatsapp.com/" target="_blank"> Escribinos </a>
+                    </button>
         </section>
-        <P>Todos los derechos reservados.</P>        
+        <p>Todos los derechos reservados.</p>
     </footer>
 
 
@@ -84,10 +87,10 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
-      $(document).ready(function(){
-      $("a[title|='Hosted on free web hosting 000webhost.com. Host your own website for       FREE.']").css("display", "none");
-      $("img[alt|='www.000webhost.com']").css("display", "none");
-      });
+        $(document).ready(function () {
+            $("a[title|='Hosted on free web hosting 000webhost.com. Host your own website for       FREE.']").css("display", "none");
+            $("img[alt|='www.000webhost.com']").css("display", "none");
+        });
     </script>
 
 </body>
