--- a/informacion.html
+++ b/informacion.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="futbol, football, femenino, futbol femenino, rio, brasil, equipo, amigos, amigas, informacion, info, reglamento, torneo, estadio, cancha">
+    <meta name="keywords"
+        content="futbol, football, femenino, futbol femenino, rio, brasil, equipo, amigos, amigas, informacion, info, reglamento, torneo, estadio, cancha">
     <meta name="description" content="Llego el mejor torneo de futbol para vos y tus amigos a San Isidro, informate!">
     <link rel="stylesheet" href="estilos/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,41 +40,35 @@
         </div>
     </header>
 
-    <H1 class="datos-utiles">Datos útiles</H1>
 
     <main class="main-informacion">
-        
+
+        <div class="predio-riofutbol">
+            <h2>Mirá el mapa. Buscá tu cancha. Ya estás jugando.</h2>
+            <img class="predio" src="multimedia/predio-rio-futbol.jpg" alt="imagen-mapa-predio">
+        </div>
+
         <div class="informacion-reglamento">
             <h2>Reglamento 2022</h2>
-            <p>Descargá el reglamento haciendo click <a href="https://drive.google.com/file/d/1JLZit1-dRuAS-6CyaDHMz9jHpLAJCNp3/view?usp=sharing" target="_blank"><strong>acá</strong></a> y enterate las nuevas reglas para RIOFTBL.</p>
+            <p>Descargá el reglamento haciendo click
+                 <a href="https://drive.google.com/file/d/1JLZit1-dRuAS-6CyaDHMz9jHpLAJCNp3/view?usp=sharing"
+                    target="_blank"><strong>acá</strong></a> y enterate las nuevas reglas para RIOFTBL.</p>
         </div>
-
-        <div class="intro-informacion">
-            <h2>Cómo llegar</h2>
-            <p>Nos encontramos a pocos kilómetros de la ciudad. Podés encontrarons en el mapa: 
-            </p>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.0042564823325!2d-3.6905223851041855!3d40.453042761355015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228e23705d39f%3A0xa8fff6d26e2b1988!2sEstadio%20Santiago%20Bernab%C3%A9u!5e0!3m2!1ses!2sar!4v1647721484781!5m2!1ses!2sar"
-                width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-
-       
-
     </main>
 
     <footer class="footer">
         <section class="contenedor-footer">
             <a href="https://es-la.facebook.com/">
                 <img class="redes" src="multimedia/facebook.png" target="_blank" alt="logo_facebook">
-            <a>
-            <a href="https://www.instagram.com/?hl=es-la">
-                <img class="redes" src="multimedia/logoig.png" target="_blank" alt="logo_instagram">
-            </a>
-            <button type="button" class="whatsapp-i">
-                    <a href="https://web.whatsapp.com/" target="_blank"> Escribinos </a>
-            </button>
+                <a>
+                    <a href="https://www.instagram.com/?hl=es-la">
+                        <img class="redes" src="multimedia/logoig.png" target="_blank" alt="logo_instagram">
+                    </a>
+                    <button type="button" class="whatsapp-i">
+                        <a href="https://web.whatsapp.com/" target="_blank"> Escribinos </a>
+                    </button>
         </section>
-        <P>Todos los derechos reservados.</P>        
+        <p>Todos los derechos reservados.</p>
     </footer>
 </body>
 
